<?xml version="1.0" encoding="utf-8" ?>
<resources>

    <string name="app_name">MusChart</string>
    <string name="developer">Maksim Kavalenka</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="message_wait">Please, wait</string>
    <string name="message_connect">Check your connection and try again</string>
    <string name="message_again">Try again</string>
    <string name="message_authentication_error">Login or password is wrong</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm the password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>

    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>

    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="tracks">Tracks</string>

    <string name="my_artists">My artists</string>
    <string name="my_genres">My genres</string>
    <string name="my_tracks">My tracks</string>

</resources>