<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_log_in"
                android:title="@string/log_in"/>
            <item
                android:id="@+id/nav_log_out"
                android:title="@string/log_out"/>
            <item
                android:id="@+id/nav_register"
                android:title="@string/register"/>
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_tracks"
                android:title="@string/tracks"/>
            <item
                android:id="@+id/nav_artists"
                android:title="@string/artists"/>
            <item
                android:id="@+id/nav_genres"
                android:title="@string/genres"/>
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_my_tracks"
                android:title="@string/my_tracks"/>
            <item
                android:id="@+id/nav_my_artists"
                android:title="@string/my_artists"/>
            <item
                android:id="@+id/nav_my_genres"
                android:title="@string/my_genres"/>
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings"/>
        </menu>
    </item>

</menu>